# ai-nexus

./: .env.example  .gitignore  .roomodes  Makefile  README.md  langgraph.json  pyproject.toml  pytest.ini
.cursor/rules/: memory.mdc  read-project-memories.mdc
.github/workflows/: checks.yml  compile-check.yml  graph-checks.yml  integration-tests.yml  pr-comment.yml  run_common_tests.yml  unit-tests.yml  update_project_memory.yml
.langgraph/static_memories/: project_info.json
agent_memories/grumpy/: review-coding.md  review-designing.md  role.md
nexus-slack-bot/: .env.example  README.md  index.ts  package.json
project_memories/: PRD.md  global.md
scripts/: README.md  fetch_pr_details.sh  generate_project_memory.sh  pick_evaluation.py  setup_github_app.py  test_webhooks.py  update_project_memory_from_pr.sh  update_project_readmes.sh
src/: webapp.py
src/agent_template/: __init__.py  agent.py  configuration.py  graph.py  memory.py  prompts.py  state.py  tools.py
src/architect/: __init__.py  configuration.py  graph.py  output.py  prompts.py  state.py  tools.py
src/architect/prompts/: v0.1.md  v0.md
src/code_agent/: __init__.py  configuration.py  graph.py  prompts.py  run.py  state.py  tools.py  utils.py
src/code_reviewer/: __init__.py  configuration.py  evaluation_prompt.md  graph.py  lg_server.py  prompts.py  question_prompt.md  state.py  system_prompt.md
src/coder/: README.md  __init__.py  graph.py  lg_server.py  mocks.py  prompts.py  run.py  state.py  tools.py
src/common/: __init__.py  chain.py  config.py  configuration.py  graph.py  logging.py  state.py
src/common/components/: __init__.py  github_mocks.py  github_tools.py  github_wraps.py  memory.py
src/common/tools/: __init__.py  (+6 more)
src/demo/: orchestrate.py  orchestrate_live.py  orchestrate_rich.py
src/deprecated_tester/: __init__.py  configuration.py  graph.py  output.py  tools.py
src/event_listener/: README.md  __init__.py  config.py  event_processor.py  github_auth.py  handlers.py  server.py
src/event_listener_tests/: __init__.py  test_auth.py  test_handlers.py  test_processor.py  test_server.py
src/grumpy/: __init__.py  configuration.py  graph.py  prompts.py  state.py  tools.py
src/orchestrator/: configuration.py  graph.py  prompts.py  state.py  test.py  tools.py
src/pr_memory_updater/: __init__.py  configuration.py  graph.py  prompts.py  state.py  tools.py  utils.py
src/pr_summarizer/: __init__.py  tools.py
src/requirement-gatherer/: prompts.py
src/requirement_gatherer/: __init__.py  configuration.py  graph.py  graph_v2.py  prompts.py  state.py  stubs.py  tools.py
src/task_manager/: .gitignore  __init__.py  configuration.py  graph.py  prompts.py  state.py  tools.py
src/tester/: README.md  __init__.py  configuration.py  graph.py  lg_server.py  output.py  prompts.py  state.py  test-agent-system-prompt.md  test-agent-testing-workflow-stage.md  tools.py
tests/datasets/: __init__.py  coder_dataset.py  orchestrator_dataset.py  pr_memory_updater_dataset.py  pr_summarizer_dataset.py  requirement_gatherer_dataset.py  task_manager_dataset.py
tests/evaluations/: __init__.py  common.py  test_architect_agent.py  test_code_reviewer_agent.py  test_coder.py  test_grumpy_agent.py  test_pr_memory_updater.py  test_task_manager.py  test_tester_agent.py
tests/fixtures/: __init__.py
tests/graph_tests/: __init__.py
tests/integration_tests/: eval_coder.py  test_architect_agent.py  test_code_reviewer_agent.py  test_coder.py  test_graph.py  test_grumpy_agent.py  test_orchestrator.py  test_pr_memory_updater.py  test_pr_summarizer.py  test_requirement_gatherer.py  test_semantic_memory.py  test_task_manager.py  test_tester_agent.py
tests/scenarios/: __init__.py  cleanup_github.py  common.py  fibonacci.py  run.py  runner.py  setup_github.py
tests/testing/: __init__.py  evaluators.py  formatter.py  inputs.py  prompts.py  utils.py
tests/unit_tests/: architect.py  common.py  test_code_reviewer.py  test_configuration.py  test_orchestrator.py
(+120 files in other folders)
