[project]
name = "ai-nexus"
version = "0.1.0"
description = "ai-nexus agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.34,<0.3.0",
    "langchain>=0.3.8",
    "langchain-core>=0.3.8",
    "python-dotenv>=1.0.1",
    "langgraph-sdk>=0.1.32",
    "langchain-google-genai>=2.0.0",
]
optional-dependencies.dev = [
    "mypy>=1.11.1", 
    "ruff>=0.6.1", 
    "pytest>=8.3.5",
    "pytest-asyncio",
    "langgraph-cli[inmem]>=0.2.7",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

# Add new agents here: #1
[tool.setuptools]
packages = ["common", "agent_template", "orchestrator", "grumpy"]
[tool.setuptools.package-dir]
"common" = "src/common"
"agent_template" = "src/agent_template"
"langgraph.templates.agent_template" = "src/agent_template"
"orchestrator" = "src/orchestrator"
"langgraph.templates.orchestrator" = "src/orchestrator"
"grumpy" = "src/grumpy"
"langgraph.templates.grumpy" = "src/grumpy"


[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = ["UP006", "UP007", "UP035", "D417", "E501"]
include = ["*.py", "*.pyi", "*.ipynb"]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
"ntbk/*" = ["D", "UP", "T201"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
ignore_errors = false
